--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -10,11 +10,15 @@ How you proceed from there depends on two questions:
 1. Whether you want to deploy a Cloud Foundry PaaS, deploy other distributed software, or do both.
 1. Whether the single-VM BOSH suits your needs, or a multi-VM BOSH is preferable.
 
-The illustration below shows the choices you make when building your environment, and the things you can do with
-your environment as a result.
-You can build your environment to provide any or all of the three operating capabilities shown.
+The illustrations below show the choices you make when building your environment.
 
-<%= image_tag("bosh-env-vertical.png") %>
+Using single-VM BOSH:
+
+<%= image_tag("bosh-arch-single.png") %>
+
+Using single- and multi-VM BOSH:
+
+<%= image_tag("bosh-arch-multi.png") %>
 
 ## <a id="single-vm"></a> Deploying Single-VM BOSH  ##
 
