replace 2 illustrations with 1 new one

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -10,15 +10,9 @@ How you proceed from there depends on two questions:
 1. Whether you want to deploy a Cloud Foundry PaaS, deploy other distributed software, or do both.
 1. Whether the single-VM BOSH suits your needs, or a multi-VM BOSH is preferable.
 
-The illustrations below show the choices you make when building your environment.
+The illustration below shows the choices you make when building your environment.
 
-Using single-VM BOSH:
-
-<%= image_tag("bosh-arch-single.png") %>
-
-Using single- and multi-VM BOSH:
-
-<%= image_tag("bosh-arch-multi.png") %>
+<%= image_tag("bosh-arch.png") %>
 
 ## <a id="single-vm"></a> Deploying Single-VM BOSH  ##
 
