add overview to landing page

--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -10,7 +10,7 @@ How you proceed from there depends on two questions:
 1. Whether you want to deploy a Cloud Foundry PaaS, deploy other distributed software, or do both.
 1. Whether the single-VM BOSH suits your needs, or a multi-VM BOSH is preferable.
 
-The illustration below shows the choices you make when building your environment.
+The illustrations below show the two basic choices for building your environment.
 
 <%= image_tag("bosh-arch.png") %>
 
