--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -465,7 +465,7 @@ packages
 3 directories, 9 files
 </pre>
 
-This modular approach, with a separate package for each dependency, is
+This modular approach, with a separate package for each dependency,
 provides maximum reusability along with clear structure.
 It is not mandatory; what packages to create is a matter of preference.
 You could even opt to put all the dependencies together in a single package,
