draft with Kim + BOSH team done

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -4,24 +4,12 @@ title: BOSH Documentation
 
 BOSH is an open source tool chain for working with large-scale distributed
 services.
-BOSH provides artifacts, abstractions and processes that coordinate the
-efforts of developers, release engineers, cloud operators, and network
-and system administrators.
+BOSH coordinates the efforts of developers, release engineers, cloud operators,
+and network and system administrators.
 
-A BOSH release easily combines in-house source code with off-the-shelf
-source and binaries.
-Developers benefit from a self-service model for testing code, and
-deployments and updates are predictable and repeatable.
-
-BOSH strives to make all operations infrastructure-agnostic and to
-abstract away differences between development, testing, and production
-environments.
-Applications deployed with BOSH remain optimally stable and robust
-despite being run on ephemeral large-scale cloud resources.
-
-Once you are familiar with the Foundations material,
-refer to other topics according to what
-you need to do with BOSH.
+BOSH frees developers from concerns about differences between environments.
+Deployments and updates are predictable, repeatable, and
+infrastructure-agnostic.
 
 ## <a id="foundations"></a> BOSH Foundations ##
 
