fix wrong heading level

--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -439,7 +439,7 @@ apply_spec:
 
 ~~~
 
-### <a id="datastore"></a> Configuring Datastores in vSphere  ###
+#### <a id="datastore"></a> Configuring Datastores in vSphere  ####
 
 The `datastore_pattern` attribute can either be the name of a datastore or a
 regular expression that matches one or more datastore names.
