--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -2,13 +2,24 @@
 title: BOSH Documentation
 ---
 
-BOSH is an open source tool chain for working with large-scale distributed
-services.
-BOSH coordinates the efforts of developers, release engineers, cloud operators,
-and network and system administrators.
+BOSH is an open source orchestration tool for working with large-scale
+deployments.
+With BOSH, you can do things like:
 
-BOSH frees developers from concerns about differences between environments.
-Deployments and updates are predictable, repeatable, and
+* scale a deployment up or down with a single command
+* define resource pools with VMs of varying sizes and use the appropriate size
+for a given job type
+* manage your static IP addresses
+* specify a base operating system for your VMs
+* upgrade the operating system for all your VMs with a single deploy command
+
+BOSH also monitors the health of the jobs running on the VMs within a deployment
+and can automatically heal the cluster if a VM dies.
+
+BOSH works on multiple IaaS offerings including AWS, Open Stack, and vSphere,
+freeing operators from concerns about differences between environments.
+
+With BOSH, deployments and updates are predictable, repeatable, and
 infrastructure-agnostic.
 
 ## <a id="foundations"></a> BOSH Foundations ##
