fix empty links and index

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -429,7 +429,7 @@ The complete dependency graph for `ardo-release` looks like this:
 For a large or complicated release, you might prefer to make more than one
 dependency graph.
 
-## <a id="..."></a> Create Package Skeletons ##
+## <a id="pkg-skeletons"></a> Create Package Skeletons ##
 
 Packages give BOSH the information it needs to prepare the binaries
 and dependencies that your jobs need to run.
@@ -558,7 +558,7 @@ files:
 
 Update the spec for each package.
 
-### <a id="..."></a> Create packaging scripts ###
+### <a id="pkg-scripts"></a> Create packaging scripts ###
 
 At compile time, BOSH takes the source files referenced in the package specs,
  and renders them into the executable binaries and scripts that your jobs will
